--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
   "dependencies": {
     "@react-three/fiber": "^8.13.0",
     "@types/three": "^0.174.0",
+    "socket.io-client": "^4.8.1",
     "three": "^0.174.0"
   }
 }
