--- a/package.json
+++ b/package.json
@@ -15,6 +15,9 @@
   },
   "dependencies": {
     "@react-three/fiber": "^8.18.0",
+    "cors": "^2.8.5",
+    "express": "^4.21.2",
+    "socket.io": "^4.8.1",
     "socket.io-client": "^4.8.1",
     "three": "^0.174.0"
   }
