--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
   },
   "dependencies": {
     "@react-three/fiber": "^8.18.0",
+    "@vercel/analytics": "^1.5.0",
     "cannon-es": "^0.20.0",
     "cors": "^2.8.5",
     "express": "^4.21.2",
